Added new Ellemy.Mvc with some cool extension methods for Contollers

--- a/Ellemy.CQRS.Example.Web/Views/Message/Index.cshtml
+++ b/Ellemy.CQRS.Example.Web/Views/Message/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h2>Index</h2>
-@Html.ActionLink("Create a New Message", "Create")
+@Html.Action("Create")
 <ul>
 @foreach (var item in Model)
 {
