--- a/Ellemy.CQRS.Example.Web/Views/Message/Create.cshtml
+++ b/Ellemy.CQRS.Example.Web/Views/Message/Create.cshtml
@@ -4,7 +4,7 @@
 
 <h2>Create</h2>
 
-@using (Html.BeginForm()){
+@using (Html.BeginForm("TestCreate","Message")){
     
     <br />
     @Html.TextArea("text");
